# claude-telegram-hook

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml
docs/: README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
scripts/: install.sh
src/: config.rs  main.rs  types.rs
src/daemon/: mod.rs  server.rs  state.rs  telegram.rs  tray.rs
src/hook/: mod.rs
src/install/: mod.rs
src/setup/: mod.rs
